--- a/package.json
+++ b/package.json
@@ -25,12 +25,24 @@
   "scripts": {
     "build": "rollup -c",
     "pretest": "npm run build",
-    "test": "node ./src/__tests__/wasm-zopfli.spec.js"
+    "test": "jest",
+    "lint": "eslint -c ./package.json ./src/**/*.js"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0-beta.34",
-    "@babel/preset-env": "^7.0.0-beta.34",
-    "@babel/preset-stage-0": "^7.0.0-beta.34",
+    "@babel/core": "^7.0.0-beta.35",
+    "@babel/preset-env": "^7.0.0-beta.35",
+    "@babel/preset-stage-0": "^7.0.0-beta.35",
+    "babel-eslint": "^8.0.3",
+    "babel-jest": "^21.2.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "eslint": "^4.13.1",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-jest": "^21.4.2",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.5.1",
+    "jest": "^21.2.1",
     "rollup": "^0.52.1",
     "rollup-plugin-babel": "^4.0.0-beta.0",
     "rollup-plugin-commonjs": "^8.2.3",
@@ -39,5 +51,40 @@
   },
   "dependencies": {
     "kaffeerost": "0.0.1"
+  },
+  "babel": {
+    "presets": [
+      [
+        "env",
+        {
+          "targets": {
+            "node": "current"
+          }
+        }
+      ],
+      "stage-0"
+    ]
+  },
+  "eslintConfig": {
+    "parser": "babel-eslint",
+    "extends": "airbnb",
+    "env": {
+      "browser": true,
+      "jest/globals": true
+    },
+    "rules": {
+      "import/no-extraneous-dependencies": [
+        "error",
+        {
+          "devDependencies": [
+            "rollup.config.js",
+            "**/__tests__/**/*"
+          ]
+        }
+      ]
+    },
+    "plugins": [
+      "jest"
+    ]
   }
 }
