Fix test importing compiled code
This prevents Babel from double parsing the code in `/dist`.

--- a/package.json
+++ b/package.json
@@ -53,6 +53,9 @@
     "kaffeerost": "0.0.1"
   },
   "babel": {
+    "only": [
+      "./src/**/*.js"
+    ],
     "presets": [
       [
         "env",
